--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>서울둘레길</title>
+    <title>낙상 공원</title>
     <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
     <header class="navbar">
-        <div class="logo">서울둘레길</div>
+        <div class="logo">낙상 공원</div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">서울둘레길 안내</a></li>
+                <li><a href="#">낙상 공원 안내</a></li>
                 <li><a href="#">코스정보</a></li>
                 <li><a href="#">알림/자료</a></li>
                 <li><a href="#">참여마당</a></li>
@@ -29,13 +29,13 @@
 
     <section class="hero">
         <div class="overlay">
-            <h1>서울둘레길 2.0</h1>
+            <h1>낙상 공원</h1>
             <p>기존 8개 코스에서 21개 코스로 새롭게!<br />소요시간과 거리 단축으로 부담없이 즐겁게!</p>
         </div>
     </section>
     <section class="search-section">
         <div class="search-left">
-            <h2><span class="icon">🚶‍♂️</span> 서울둘레길 <span class="green">맞춤 코스 검색</span></h2>
+            <h2><span class="icon">🚶‍♂️</span> 낙상 공원 <span class="green">맞춤 코스 검색</span></h2>
 
             <div class="search-box">
                 <div class="point-selection">
@@ -71,58 +71,12 @@
         </div>
 
         <div class="search-right">
-            <img src="https://i.natgeofe.com/k/58b8e5a7-cbf7-4f12-83d6-b88c92c844fd/south-korea-market.jpg?wp=1&w=1084.125&h=609"
-                alt="걷는 이미지">
+            <img src="/assets/img.jpeg" alt="걷는 이미지">
             <div class="event-box">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfZuqAqUa4wiuPyUFl24N2nBBHotICEJ9C9w&s"
-                    alt="이벤트 이미지">
+                <img src="/assets/img2.jpeg" alt="이벤트 이미지">
             </div>
         </div>
     </section>
-    <section class="trail-now">
-        <div class="trail-now-left">
-            <h5>Seoul Trail</h5>
-            <h2>서울둘레길, <span class="green">지금</span></h2>
-            <p>서울 속, 자연의 생기가 가득한<br>산책길을 걸어보세요.</p>
-            <button class="go-btn">바로가기 ➤</button>
-        </div>
-
-        <div class="trail-now-right">
-            <button class="nav-btn prev" onclick="scrollCards('left')">❮</button>
-            <div class="card-wrapper" id="cardWrapper">
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKVmctY8eKaAYKP_yjGvIEf5d3bn7AYAviEg&s"
-                        alt="">
-                    <p>[250408] 동행(단... </p>
-                </div>
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKVmctY8eKaAYKP_yjGvIEf5d3bn7AYAviEg&s"
-                        alt="">
-                    <p>[250405] 서울둘레...</p>
-                </div>
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKVmctY8eKaAYKP_yjGvIEf5d3bn7AYAviEg&s"
-                        alt="">
-                    <p>[250402] 서울둘레...</p>
-                </div>
-                <!-- Нэмэлт картууд энд байж болно -->
-            </div>
-            <button class="nav-btn next" onclick="scrollCards('right')">❯</button>
-        </div>
-    </section>
-
-    <script>
-        function scrollCards(direction) {
-            const wrapper = document.getElementById('cardWrapper');
-            const scrollAmount = 360; // нэг картын өргөн + margin
-
-            if (direction === 'left') {
-                wrapper.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-            } else {
-                wrapper.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-            }
-        }
-    </script>
     <section class="notice-menu-section">
         <div class="notice-box">
             <div class="notice-header">
@@ -133,7 +87,7 @@
             <ul class="notice-list">
                 <li>
                     <span class="tag blue">공지</span>
-                    <span class="title">서울둘레길안내센터 기간제 근로자 채용관련 최종 합격자 안내</span>
+                    <span class="title">낙상 공원안내센터 기간제 근로자 채용관련 최종 합격자 안내</span>
                     <span class="date">2025-04-11</span>
                 </li>
                 <li>
@@ -158,80 +112,85 @@
             <h3>📋 <span class="bold">즐겨찾는 메뉴</span></h3>
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0uJxzPh5ZvuKfD0dyzEAbU1HqXLYVoAJrNQ&s"
-                        alt="센터 안내" />
+                    <img src="assets/img6.jpeg" alt="센터 안내" />
                     <span>센터 안내</span>
                 </div>
                 <div class="menu-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0uJxzPh5ZvuKfD0dyzEAbU1HqXLYVoAJrNQ&s"
-                        alt="코스 정보" />
+                    <img src="assets/img5.jpeg" alt="코스 정보" />
                     <span>코스 정보</span>
                 </div>
-                <div class="menu-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0uJxzPh5ZvuKfD0dyzEAbU1HqXLYVoAJrNQ&s"
-                        alt="완주 인증서 안내" />
-                    <span>완주 인증서 안내</span>
-                </div>
-                <div class="menu-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0uJxzPh5ZvuKfD0dyzEAbU1HqXLYVoAJrNQ&s"
-                        alt="명예의 전당" />
-                    <span>명예의 전당</span>
-                </div>
             </div>
         </div>
     </section>
-    <section class="social-media">
-        <div class="social-left">
-            <h5>Social Media</h5>
-            <h2>소셜 <span class="blue">미디어</span></h2>
-            <p>서울둘레길의 아름다운 모습을<br>SNS 안에서 둘러보세요.</p>
-            <div class="hashtag">#서울둘레길</div>
+    <section class="talk-section">
+        <div class="talk-item">
+            <img src="/assets/img7.jpeg" alt="소통 이미지" />
         </div>
+        <div class="talk-item">
+            <h2>인터뷰</h2>
+            <p>
+                <br><br> 지금 공부하고있는 과목을 선택하게 된 계기는 무엇인가요?<br>
+                코딩을 통해 컴퓨터 내에서 나만의 세계를 창조할 수 있다는 점이 굉장히 매력적으로 다가왔었다.
 
-        <div class="social-right">
-            <button class="social-nav prev" onclick="scrollSocial('left')">❮</button>
-            <div class="social-cards" id="socialWrapper">
-                <div class="social-card">
-                    <img
-                        src="https://ik.imagekit.io/tvlk/blog/2024/06/shutterstock_2345265717.jpg?tr=q-70,c-at_max,w-500,h-300,dpr-2" />
-                    <p>서울둘레길 봄꽃 너무 예뻐요! 🌸</p>
-                </div>
-                <div class="social-card">
-                    <img
-                        src="https://ik.imagekit.io/tvlk/blog/2024/06/shutterstock_2345265717.jpg?tr=q-70,c-at_max,w-500,h-300,dpr-2" />
-                    <p>봄날의 산책길 #서울둘레길</p>
-                </div>
-                <div class="social-card">
-                    <img
-                        src="https://ik.imagekit.io/tvlk/blog/2024/06/shutterstock_2345265717.jpg?tr=q-70,c-at_max,w-500,h-300,dpr-2" />
-                    <p>주말엔 둘레길 걷기 딱 좋아요!</p>
-                </div>
-                <div class="social-card">
-                    <img
-                        src="https://ik.imagekit.io/tvlk/blog/2024/06/shutterstock_2345265717.jpg?tr=q-70,c-at_max,w-500,h-300,dpr-2" />
-                    <p>벚꽃길 지나며 한 컷! 📸</p>
-                </div>
-                <div class="social-card">
-                    <img
-                        src="https://ik.imagekit.io/tvlk/blog/2024/06/shutterstock_2345265717.jpg?tr=q-70,c-at_max,w-500,h-300,dpr-2" />
-                    <p>#명예의전당 인증 완료!</p>
-                </div>
-            </div>
-            <button class="social-nav next" onclick="scrollSocial('right')">❯</button>
+                <br><br>이 직무에서 가장 보람 있었던 순간은 언제였나요?<br>
+                시 프로젝트를 진행했을 때이다. 분명 힘들지만, 다 마치고 결과물을 보면 성취감이 상당하다. 이 과제 또한 마찬가지다.
+
+                <br><br>힘들었던 순간을 어떻게 극복하셨나요?<br>
+                힘들다는 것은 아직 배울 게 남아있다는 뜻이다. 내가 성장하고 있다는 사실에 기쁨을 느꼈다.
+
+                <br><br>본인의 강점이 직무에 어떻게 도움이 된다고 생각하시나요?<br>
+                시작은 더딜 수 있으나 계속 나무처럼 끊임없이 성장한다는 점이다. 포기하지 않는다.
+
+                <br><br>앞으로 어떤 커리어 목표를 가지고 계신가요?<br>
+                돈이다. 빌딩 한 채 살 만한 돈을 벌 것이다. 영앤리치가 목표이다.
+
+                <br><br>어릴 때 어떤 사람이 되고 싶었나요?<br>
+                영앤리치가 목표이다.
+
+                <br><br>인생에 가장 큰 영향을 준 사람은 누구인가요?<br>
+                무한도전의 노홍철 같다. 그의 긍정 마인드가 나에게 가장 큰 영향을 준 것 같다.
+
+                <br><br>가장 기억에 남는 실패 경험과 그로부터 배운 점은 무엇인가요?<br>
+                아직까지 기억에 남는 실패는 대학 진학에 실패하고 재수한 것이다. 1년이란 시간을 바친 만큼 앞으로 그 어떤 실패가 찾아와도 금방 털고 일어날 수 있는 멘탈을 가지게 됐다.
+
+                <br><br>결정을 내릴 때 가장 중요하게 생각하는 가치는 무엇인가요?<br>
+                나중에 내 아이가 생겼을 때, 자신 있게 이런 것도 했었다라고 말할 수 있는가 없는가 이다. 객기여도 충분히 나중에 재밌는 이야기가 나올 것 같으면 한다.
+
+                <br><br> 본인을 한 단어로 표현한다면 어떤 단어일까요? 그 이유는요?<br>
+                낭만. 항상 낭만을 찾아 떠난다.
+
+                <br><br> 요즘 가장 관심 있는 주제나 트렌드는 무엇인가요?<br>
+                외모다. 군대에서 전역한지 얼마 안돼서 그런 것 같다. 피부도 좋아지고 싶고, 몸도 커지고 싶고, 옷도 잘 입고 싶다.
+
+                <br><br>만약 하루 동안 다른 직업을 체험할 수 있다면 어떤 걸 해보고 싶으신가요?<br>
+                여행 가이드 해보고 싶다. 낭만 넘칠 것 같다.
+
+                <br><br> 최근에 읽은 책이나 인상 깊게 본 콘텐츠가 있나요?<br>
+                책은 잘 안 읽고, 재밌게 본 콘텐츠로는 '진격의 거인'이라는 애니다. 물론 19금이고 잔인하지만, 철학적인 내용이 상당히 짙다. 내 삶을 되돌아 볼 수 있는 기회가 됐다.
+
+                <br><br> 일을 하면서 가장 중요하게 여기는 철학이 있다면?<br>
+                일을 하는 동안에도 그 시간을 가치 있게 쓰고 싶어한다. 단순히 시간만 떼우는 것을 싫어한다.
+
+                <br><br> 다른 사람들이 본인에 대해 자주 하는 말은 무엇인가요?<br>
+                '긍정'이다. 원영적 사고를 10년 전부터 해왔다. 그래서 친구들 고민상담도 굉장히 많이 해줬었다. 효과는 좋았다. 술 때문이었을 수도 있다.
+
+                <br><br> 팀에서 본인의 역할은 주로 어떤 편인가요?<br>
+                모 아니면 도 같은 느낌이다. 협업에 뛰어나진 못해서 주파수가 잘 맞으면 총괄을 할 정도로 엄청나게 열심히 하고, 주파수가 안 맞으면 큰 역할을 수행하지 못한다.
+
+                <br><br> 갈등이 생겼을 때 어떻게 해결하려고 하시나요?<br>
+                갈등을 꼭 풀어야 한다면, 내 마음을 진실하게 전한다. 이 것만큼 좋은 방법은 없다고 본다. 자기 마음을 솔직하고 세세하게 풀어내는 게 또 쉽지 않은 일이긴 하다.
+
+                <br><br> 협업에서 가장 중요하다고 생각하는 요소는 무엇인가요?<br>
+                당연히 같은 곳을 바라보고 있는가 아닌가 이다. 물론 서로 다르면 조율할 수 있겠지만, 그리고 서로 보완할 수 있겠지만, 엄청난 포텐이 터지지는 않는다.
+
+                <br><br> 앞으로 5년 후, 어떤 모습으로 살고 계실 것 같나요?<br>
+                세계여행을 하고 있을 것 같다. 디지털 노마드의 모습으로 말이다.
+
+                <br><br> 어떤 유산(legacy)을 남기고 싶으신가요?<br>
+                '내 정신'을 남기고 싶다. 이 마인드를 남기고 싶다.
+            </p>
         </div>
     </section>
-    <script>
-        function scrollSocial(direction) {
-            const wrapper = document.getElementById('socialWrapper');
-            const scrollAmount = 240;
-
-            if (direction === 'left') {
-                wrapper.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-            } else {
-                wrapper.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-            }
-        }
-    </script>
 </body>
 
 </html>
