--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
     <section class="talk-section">
         <div class="talk-item">
             <img src="/assets/img7.jpeg" alt="소통 이미지" />
+            <p>과제명: 낙산 공원</p>
+            <p>이름: 엥크투</p>
+            <p>학번: 202313837</p>
+            <p>제출일: 2025.04.11</p>
+            <p></p>
         </div>
         <div class="talk-item">
             <h2>인터뷰</h2>
